--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /dotnet_core/VietnameseAccent/Accent.API/bin/
 /dotnet_core/VietnameseAccent/Accent.KShortestPaths/obj/
 /torch-source/
+/docker-build/cuelake/
