--- a/composer/.env
+++ b/composer/.env
@@ -1,1 +1,9 @@
 MAP: /home/vmadmin/python/v6/file-service-02/map
+PGHOST: 172.16.7.34
+PGPORT: 5432
+PGUSER: postgres
+PGPASS: Erm@2021
+CATALINA_OPTS: -Xms2048m -Xmx6144m -XX:MaxPermSize=256m -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Dfile.encoding=utf8 -DDI_HOME=/opt/pentaho-server/system/kettle -Dpghost=172.16.7.34 -Dpgport=5432 -Dpguser=postgres -Dpgpass=Erm@2021
+docker run --rm -it --entrypoint bash b0d392c1930d -p 8080:8080
+docker run --name pentaho  -p 8080:8080 kubedos/pentaho-server  --env-file ./env
+docker run --name pentaho  -p 8080:8080  -e PGHOST='172.16.7.34' -e PGPORT=5432 -e PGUSER='postgres' -e PGPASS='Erm@2021' kubedos/pentaho-server
