--- a/docker-build/helm/xdoc-job/templates/deployment.yaml
+++ b/docker-build/helm/xdoc-job/templates/deployment.yaml
@@ -33,6 +33,8 @@ kind: Deployment
 metadata:
   name: {{$value.name}}
   namespace: {{$.Values.namespace}}
+  annotations:
+    description: "{{$value.description | default $.Values.defaults.description }}"
 spec:
   selector:
     matchLabels:
