--- a/docker-build/helm/xdoc-job/values.yaml
+++ b/docker-build/helm/xdoc-job/values.yaml
@@ -52,10 +52,12 @@ deployments:
     endpoint: files_move_tenants.py
 
 
-jobs:
+cronJobs:
   - name: fix-elastic-search-missing-data
     endpoint: fix_elastic_search_missing_data.py
     description: Lỗi này là do mấy cha nội Codx đưa dữ liệu vào sai nên phải fix trước khi tìm
+    schedule: "00 00 * * *"
+    numOfPods: 1
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
