--- a/docker-build/helm/xdoc-job/templates/deployment.yaml
+++ b/docker-build/helm/xdoc-job/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
     matchLabels:
       app: files-{{$value.name}}
   {{end}}
-  replicas: 1
+  replicas: {{$value.replicas | default $.Values.defaults.replicas}}
   template:
     metadata:
       labels:
