--- a/docker-build/helm/xdoc-job/values.yaml
+++ b/docker-build/helm/xdoc-job/values.yaml
@@ -4,7 +4,7 @@
 
 replicaCount: 1
 defaults:
-  replicate: 1
+  replicas: 2
   description: "Uprate version"
   executor: "python3"
   restartPolicy: Always
@@ -18,7 +18,7 @@ nfs:
   directory: /var/nfs_share_dir_for_k8s
 
 image:
-  repository: nttlong/files-service-final:rc.0.5.2.5
+  repository: nttlong/files-service-final:rc.0.5.2.6
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "rc.0.5.2.2"
@@ -69,6 +69,7 @@ deployments:
     kind: Job
     restartPolicy: Never
     apiVersion: batch/v1
+    replicas: 1
 
 
 
